# tmt

./: .gitignore  COPYRIGHT  Cargo.toml  arbitrary_floating_point  build.rs  noxfile.py  pyproject.toml  readme  readme.md
ldatranslate/: Cargo.toml  __ini__.py  __init__.py  __init__.pyi  convert_tomotopy_lda.py  ldatranslate.pyi  variable_names.pyi
ldatranslate/ldatranslate/: __init__.pyi  variable_names.pyi
ldatranslate/src/: aligned_data.rs  data.bulkjson  domain_voting.rs  extenders.rs  lib.rs  tests_to_migrate  variable_provider.rs
ldatranslate/src/py/: aliases.rs  dictionary.rs  enum_mapping.rs  helpers.rs  mod.rs  tokenizer.rs  topic_model.rs  topic_model_builder.rs  translate.rs  variable_provider.rs  vocabulary.rs  word_counts.rs
ldatranslate/src/tools/: boost_norms.rs  boosting.rs  mean.rs  memory.rs  mod.rs  non_zero.rs  tf_idf.rs
ldatranslate/src/tools/google_ngram_statistic/: mod.rs  statistics.rs
ldatranslate/src/tools/ndarray_ext/: mod.rs  norm.rs
ldatranslate/src/translate/: candidate.rs  config.rs  dict_meta.rs  errors.rs  mod.rs  phantoms.rs  topic_model_ext.rs  topic_model_specific.rs  traits.rs
ldatranslate/src/translate/dictionary_meta/: booster.rs  coocurrence.rs  count.rs  count_weighted.rs  dict_meta.rs  dictionary_association.rs  horizontal_boost_1.rs  iter.rs  mod.rs  ngram_score_boost.rs  topic_associated.rs  vertical_boost_1.rs  voting.rs
ldatranslate/src/translate/entropies/: bregman_divergences.rs  errors.rs  f_divergences.rs  mod.rs
ldatranslate/src/translate/traits/: standard.rs
ptmt/: __ini__.py  convert_tomotopy_lda.py  ptmt.pyi
src/: aligned_data.rs  external_variable_provider.rs  lib.rs  main.rs  py.rs  tokenizer.rs  toolkit.rs  topicmodel.rs  translate.rs  variable_names.rs  voting.rs
src/aligned_data/: fast_processing.rs  offset.rs  stopwords.rs  tokenizer.rs
src/py/: aliases.rs  dictionary.rs  enum_mapping.rs  helpers.rs  mod.rs  search.rs  tokenizer.rs  topic_model.rs  topic_model_builder.rs  translate.rs  variable_provider.rs  vocabulary.rs  voting.rs
src/tokenizer/: mod.rs  phrase_recognizer.rs  reconstruct_or_unicode.rs  stemming.rs  unicode_segmenter.rs
src/toolkit/: aho.rs  evalexpr.rs  from_str_ex.rs  mod.rs  nom.rs  normal_number.rs  once_cell_serializer.rs  once_lock_serializer.rs  once_serializer.rs  partial_ord_iterator.rs  py_helpers.rs  pystub.rs  register_python.rs  special_python_values.rs  sync_ext.rs  tupler.rs  typesafe_interner.rs  with_ref_of.rs
src/toolkit/evalexpr/: extenders.rs  impls.rs  mod.rs
src/topicmodel/: dictionary.rs  domain_matrix.rs  enums.rs  io.rs  language_hint.rs  math.rs  mod.rs  reference.rs  topic_model.rs  traits.rs  vocabulary.rs
src/topicmodel/dictionary/: dictionary.rs  direction.rs  hacks.rs  io.rs  iterators.rs  len.rs  loader.rs  metadata.rs  mod.rs  traits.rs
src/topicmodel/model/: classic_serialisation.rs  inferencer.rs  meta.rs  mod.rs  traits.rs  translate_ext.rs
src/translate/: config.rs  errors.rs  language.rs  mod.rs  phantoms.rs  topic_model_specific.rs  traits.rs
src/variable_provider/: errors.rs  mod.rs  targets.rs  traits.rs  variable_names.rs
src/voting/: aggregations.rs  buildin.rs  constants.rs  display.rs  errors.rs  mod.rs  parser.rs  py.rs  registry.rs  spy.rs  traits.rs  walk.rs
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs  phrase_recognizer.rs  reconstruct_or_unicode.rs  stemming.rs  unicode_segmenter.rs
toolkit/: Cargo.toml
toolkit/src/: aho.rs  crc32_for_reader.rs  from_str_ex.rs  fs.rs  lib.rs  partial_ord_iterator.rs  py_helpers.rs  pystub.rs  register_python.rs  rw_ext.rs  special_python_values.rs  sync_ext.rs  typesafe_interner.rs  with_ref_of.rs
toolkit/src/evalexpr/: enum_context.rs  mod.rs
topicmodel/: Cargo.toml  build.rs
topicmodel/src/: enums.rs  interners.rs  io.rs  language_hint.rs  lib.rs  traits.rs
topicmodel/src/dictionary/: direction.rs  hacks.rs  io.rs  iterators.rs  len.rs  mod.rs  traits.rs
topicmodel/src/dictionary/loader/: dictcc.rs  ding.rs  eurovoc.rs  file_parser.rs  free_dict.rs  google_ngram.rs  iate_reader.rs  mod.rs  ms_terms_reader.rs  muse.rs  toolkit.rs  wiktionary_reader.rs
topicmodel/src/dictionary/loader/dicts_info/: omega_wiki.rs  tbx.rs  wikipedia.rs
topicmodel/src/dictionary/loader/helper/: gen_freedict_tei_reader.rs  mod.rs  xml_reader.rs
topicmodel/src/dictionary/loader/word_infos/: domain.rs  gender.rs  language.rs  number.rs  pos.rs  pos_tags.rs  region.rs  register.rs
topicmodel/src/dictionary/metadata/: coocurrence_matrix.rs  dict_meta_topic_matrix.rs  dictionary.rs  html_support.rs  mod.rs
topicmodel/src/dictionary/metadata/containers/: iter.rs  mod.rs  update.rs  with_dict.rs
topicmodel/src/dictionary/metadata/containers/classic/: metadata.rs  mod.rs  python.rs  reference.rs  reference_mut.rs
topicmodel/src/dictionary/metadata/containers/ex/: collector.rs  field_denom.rs  manager.rs  metadata.rs  mod.rs  reference.rs  reference_mut.rs  resolved_value.rs  solved.rs  solved_new_arg.rs  typedef.rs
topicmodel/src/dictionary/metadata/dict_meta_topic_matrix/: index.rs
topicmodel/src/dictionary/search/: index.rs  mod.rs  searcher.rs
topicmodel/src/dictionary/search/impls/: scanning.rs  trie.rs
topicmodel/src/dictionary/traits/: generic_traits.rs
topicmodel/src/model/: classic_serialisation.rs  inferencer.rs  meta.rs  meta_small.rs  mod.rs  traits.rs  views.rs
topicmodel/src/translate/: mod.rs  standard.rs  traits.rs
topicmodel/src/vocabulary/: anonymous.rs  mod.rs  traits.rs
topicmodel/xml2code/src/: converter.rs  lib.rs
translate/: Cargo.toml
translate/src/: lib.rs
voting/: Cargo.toml
voting/src/: aggregations.rs  buildin.rs  constants.rs  display.rs  errors.rs  interners.rs  lib.rs  parser.rs  py.rs  registry.rs  spy.rs  traits.rs
voting/src/parser/: input.rs  logic.rs  traits.rs  voting_function.rs
voting/src/variable_provider/: errors.rs  mod.rs  traits.rs  variable_names.rs
voting/src/variable_provider/providers/: global.rs  id_based.rs  mod.rs  topic_wise.rs
xml2code/: Cargo.toml
xml2code/src/: converter.rs  lib.rs
(+109 files in other folders)
