[package]
name = "ldatranslate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ldatranslate"
crate-type = ["cdylib"]


[dependencies]
# Python binding
pyo3 = "0.21"
itertools = "0.13"
thiserror = "1.0"
zip = "2"
strum = { version = "0.26", features = ["derive"] }
delegate = "0.12"
serde = { version = "1.0.202", features = ["derive", "rc"] }
serde_json = "1"
#byteorder = "1"
bincode = "1"
flate2 = "1"
regex = "1"
#once_cell = "1"
enum_dispatch = "0.3"
approx = "0.5"
rayon = "1"
log = "0.4"
rand = "0.9.0-alpha.1"
rand_distr = "0.5.0-alpha.1"
statrs = "0.17"
string-interner = { version = "0.17", features = ["serde", "std"] }
# https://crates.io/crates/internment
#https://github.com/ISibboI/evalexpr
evalexpr = "11"
nom = "7"
num = "0.4"
num_enum = "0.7"
derive_more = { version = "1.0", features = ["from", "try_from", "try_into"] }
paste = "1.0"
#derive-where = "1.2"
#tap = "1"
compact_str = "0.7"
#sevenz-rust = "0.6.0"
#memchr = "2"
rust-stemmers = { version = "1" }
charabia = "0.8"
trie-rs = { version = "0.4", features = ["serde", "rayon"] }
fst = "0.4"
aho-corasick = "1.1.3"
#unicode-normalization = { version = "0.1" }
unicode-segmentation = { version = "1.11" }
file-format = { version = "0", features = ["reader"] }
whatlang = "0.16"
indenter = { version = "0", features = ["std"] }
const-str = "0.5"
quick-xml = "0.36"
derive_builder = "0.20"
memchr = "2.7"
#derive-where = "1.2"
convert_case = "0"
indexmap = "2.6"

[build-dependencies]
xml2code = {path = "xml2code"}