[workspace]
resolver = "2"
members = ["ldatranslate", "toolkit", "topicmodel", "voting", "tokenizer", "translate"]

[workspace.dependencies]
ldatranslate-toolkit = {path = "toolkit"}
ldatranslate-voting = {path = "voting"}
ldatranslate-topicmodel = {path = "topicmodel"}
ldatranslate-tokenizer = {path = "tokenizer"}
ldatranslate-translate = {path = "translate"}

# Python binding
pyo3 = { version = "0.22", features = ["default", "serde", "hashbrown", "either", "auto-initialize"] }
itertools = "0.13"
thiserror = "1.0"
zip = "2"
strum = { version = "0.26", features = ["derive"] }
delegate = "0.12"
serde = { version = "1.0.202", features = ["derive", "rc"] }
serde_json = "1"
#byteorder = "1"
bincode = "1"
flate2 = "1"
regex = "1"
#once_cell = "1"
enum_dispatch = "0.3"
approx = "0.5"
rayon = "1"
log = "0.4"
rand = "0.9.0-alpha.1"
rand_distr = "0.5.0-alpha.1"
statrs = "0.17"
string-interner = { version = "0.17", features = ["serde", "std"] }
evalexpr = {git = "https://github.com/FelixEngl/evalexpr.git", features = ["num", "num_primitive"]}
nom = "7"
num = "0.4"
num_enum = "0.7"
derive_more = { version = "1.0", features = ["from", "try_from", "try_into"] }
paste = "1.0"
compact_str = "0.7"
rust-stemmers = { version = "1" }
charabia = "0.8"
trie-rs = { version = "0.4", features = ["serde", "rayon"] }
fst = "0.4"
aho-corasick = "1.1.3"
#unicode-normalization = { version = "0.1" }
unicode-segmentation = { version = "1.11" }
file-format = { version = "0", features = ["reader"] }
whatlang = "0.16"
indenter = { version = "0", features = ["std"] }
const-str = "0.5"
quick-xml = { version = "0.37" }
derive_builder = "0.20"
memchr = "2.7"
convert_case = "0"
indexmap = { version = "2.6", features = ["serde"] }
tar = "0.4"
tinyset = { version = "0.5.0", features = ["serde"] }
html-escape = "0.2.13"
pretty = "0"
deranged = "0.3"
env_logger = "0.11"
sealed = "0.6"
either = { version = "1.13", features = ["serde"] }
enum-map = { version = "2.7", features = ["serde"] }
#nalgebra = { version = "0.33",  features = ["serde", "rayon"]}
float-cmp = "0.10.0"
lockfree-object-pool = "0.1.6"
zstd = "0.13"
camino = "1.1"
byte-unit = "5.1"
#ciborium = "0.2"
pathdiff = { version = "0.2", features = ["camino"] }
walkdir = "2.5.0"
crc32fast = "1.4.2"
strsim = "0.11"
safer_owning_ref = "0.5.0"
stable_deref_trait = "1.2.0"
# For future use?
#arcstr = "1.2"
crossbeam-channel = "0.5"
# Plugin System
inventory = { version = "0.3" }
pyo3-stub-gen = { version = "0.6.0" }
build_html = "2.5.0"
bitvec = { version = "1", features = ["serde"] }
arcstr = { version = "1.2.0", features = ["serde"] }
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
sysinfo = "0.32.1"
ndarray-linalg = "0.16.0"